still need to get the gris responsive to the varying sizes of viewports. i dont think im setting the media query correctly. gonna stop working on the grid so i can make a dent in the java documentation as im sure it will be too much to complete this evening

--- a/pub/css/main.css
+++ b/pub/css/main.css
@@ -96,6 +96,8 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@media only screen and (min-width:30em) and (max-width:90em) {
+
 .container {
     max-width:100%;
 }
@@ -170,6 +172,8 @@ td {
 
 .r9 :nth-child(even) {
     background-color:#AFEEEE;
+}
+
 }
 /* use css to style color or border, cellpadding
 
